--- a/app.json
+++ b/app.json
@@ -9,19 +9,19 @@
         },
         "AUUID": {
             "description": "UUID充当各个配置的路径和账号密码，建议修改和妥善保存,可生成UUID的网站: https://www.uuidgenerator.net",
-            "value": "24b4b1e1-7a89-45f6-858c-242cf53b5bdb"
+            "value": "b0d9d1b6-5f58-4b53-b70a-0320fcf4fd07"
         },
         "CADDYIndexPage": {
-            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/redapple365/xrayher/etc/CADDYIndexPage.md",
+            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/redapple365/xraiyher/etc/CADDYIndexPage.md",
             "value": "https://github.com/AYJCSGM/mikutap/archive/master.zip"
         },
         "CONFIGCADDY": {
             "description": "自定义网络地址读取配置运行CADDY，不熟悉CADDY配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/redapple365/xrayher/main/etc/Caddyfile"
+            "value": "https://raw.githubusercontent.com/redapple365/xraiyher/main/etc/Caddyfile"
         },
         "CONFIGXRAY": {
             "description": "自定义网络地址读取配置运行xray，不熟悉xray配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/redapple365/xrayher/main/etc/xray.json"
+            "value": "https://raw.githubusercontent.com/redapple365/xraiyher/main/etc/xray.json"
         },
         "ParameterSSENCYPT": {
             "description": "SS加密方式，查看支持协议: https://www.v2fly.org/config/protocols/shadowsocks.html",
@@ -29,10 +29,10 @@
         },
         "StoreFiles": {
             "description": "自定义网络地址读取存储文件列表",
-            "value": "https://raw.githubusercontent.com/redapple365/xrayher/main/etc/StoreFiles"
+            "value": "https://raw.githubusercontent.com/redapple365/xraiyher/main/etc/StoreFiles"
         }
     },
-    "website": "https://github.com/redapple365/xrayher",
-    "repository": "https://github.com/redapple365/xrayher",
+    "website": "https://github.com/redapple365/xraiyher",
+    "repository": "https://github.com/redapple365/xraiyher",
     "stack": "container"
 }
